# neurocgmd

./: .gitignore  MANIFEST.in  README.md  neurocgmd.py  pyproject.toml
ai_control/: __init__.py  chemistry_governor.py  controller.py  policies.py  resource_allocator.py  stability_monitor.py
benchmarks/: __init__.py  baseline_suite.py  small_protein.py
chemistry/: __init__.py  interface_logic.py  residue_semantics.py
compartments/: __init__.py  domain_models.py  registry.py  routing.py
config/: __init__.py  protein_mapping.py  run_manifest.py  runtime.py
core/: __init__.py  constants.py  exceptions.py  interfaces.py  project_manifest.py  state.py  state_registry.py  types.py  units.py
examples/: barnase_20ns.toml  barnase_barstar.toml  quick_test.toml  spike_ace2.toml
forcefields/: __init__.py  base_forcefield.py  bonded_potentials.py  hybrid_engine.py  material_templates.py  nonbonded_potentials.py  protein_import_forcefield.py  protein_shadow_profiles.py  spatial_semantic_profiles.py  trusted_sources.py  universal_forcefield.py  universal_types.py
graph/: __init__.py  adjacency_utils.py  connectivity_rules.py  edge_models.py  graph_manager.py  message_passing.py
integrators/: __init__.py  baoab.py  base.py  langevin.py
io/: README.md  __init__.py  checkpoint_writer.py  export_registry.py  pdb_loader.py  trajectory_writer.py
memory/: __init__.py  episode_registry.py  replay_buffer.py  trace_store.py
ml/: __init__.py  differentiable_hooks.py  ensemble_uncertainty.py  live_features.py  neural_residual_model.py  online_trainer.py  residual_model.py  scalable_residual.py  uncertainty_model.py
optimization/: __init__.py  backend_execution.py  backend_registry.py  compute_backend.py  profiling.py  scaling_hooks.py
physics/: __init__.py  constraints.py  electrostatics.py  neighbor_list.py  periodic_boundary.py  production_evaluator.py
plasticity/: __init__.py  engine.py  hebbian.py  pruning.py  reinforcement.py  stdp.py  traces.py
prepare/: __init__.py  ions.py  models.py  pipeline.py  protonation.py  solvation.py
qcloud/: __init__.py  adaptive_refinement.py  cloud_state.py  event_analyzer.py  protein_shadow_tuning.py  qcloud_coupling.py  region_selector.py  shadow_cloud.py  shadow_correction.py  shadow_mapping.py  spatial_semantic_field.py
sampling/: __init__.py  enhanced_sampling.py  production_engine.py  production_loop.py  simulation_loop.py  stage_runner.py
scripts/: __init__.py  build_docs.py  full_pipeline_demo.py  import_protein_system.py  live_dashboard.py  neurocgmd.py  plot_analysis_png.py  plot_architecture.py  plot_binding.py  plot_scientific_validation.py  (+5 more)
(+178 files in other folders)
